<resources>
    <string name="app_name">Handicap Tracker</string>
    <string name="boat">Boat</string>
    <string name="_1_0">1.0</string>
    <string name="race">Race: </string>
    <string name="delete_all">Delete All Handicaps</string>
    <string name="save">Save</string>
    <string name="_1">1</string>
    <string name="rating">Rating: </string>
    <string name="_1_1">1.1</string>
    <string name="start_time">Start Time: </string>
    <string name="_11_00_00">11:00:00</string>
    <string name="delta">Delta :</string>
    <string name="delete_all_races">Delete All Races</string>
    <string name="title_activity_add_race">AddRace</string>
    <string name="show_handicaps">Show Handicaps</string>
    <string name="show_races">Show Races</string>
    <string name="title_activity_list_races">List All Races</string>
    <string name="handicaps">Boats</string>
    <string name="race_deltas">Race Deltas</string>
    <string name="our_rating">Our Rating:</string>
    <string name="menu_races">Races</string>
    <string name="menu_boats">Boats</string>
    <string name="menu_cog_graph">COG Graph</string>
</resources>
