<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddEditHandicapActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_view_boatname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boat"
        android:inputType="text"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_view_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_boatname"
        android:hint="@string/_1_0"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"

        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/race"
        android:layout_below="@id/text_view_rating"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <NumberPicker
        android:id="@+id/number_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_race" />



</RelativeLayout>