<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_boat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/boat"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/text_view_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/text_view_boat"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/_1_1"
            />
        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_boat"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/delta"
            />

        <TextView
            android:id="@+id/delta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label"
            android:layout_below="@id/text_view_boat"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="200"
            />





    </RelativeLayout>



</androidx.cardview.widget.CardView>